--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,11 @@ dependencies {
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:1.10.19'
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+//    Volley
+    implementation 'com.android.volley:volley:1.0.0'
+
+    implementation 'com.android.support:cardview-v7:27.1.1'
 }
