--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resValue "string", "google_maps_key", (project.findProperty("GOOGLE_MAPS_API_KEY") ?: "")
     }
     buildTypes {
         release {
@@ -21,12 +22,14 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
-
     implementation 'com.android.support:design:27.1.1'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // Glide dependency
@@ -41,14 +44,18 @@ dependencies {
 
     api 'com.google.firebase:firebase-database:15.0.1'
     api 'com.google.firebase:firebase-auth:15.1.0'
+    api 'com.google.android.gms:play-services-location:15.0.1'
+    api 'com.google.android.gms:play-services-maps:15.0.1'
 
     testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:1.10.19'
 
+    // picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-//    Volley
+    // Volley
     implementation 'com.android.volley:volley:1.0.0'
 
+    // cardview
     implementation 'com.android.support:cardview-v7:27.1.1'
 }
+
