--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,10 @@ dependencies {
 
     // cardview
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
 }
 
