--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.example.erik.eriknevilead340"
+        applicationId "Neville.AD340.Application"
         minSdkVersion 27
         targetSdkVersion 27
         versionCode 1
